apps/wormhole/llm/overlays/dev/gateway_route_policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: llm
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: llm
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: llm
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
